2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-operation.c:
    * src/seahorse-pgp-source.c: Display error when keys to import are 
    created in the future. Fixes #356302
    * libcryptui/cryptui-key-set.c: Don't barf when the daemon sends us 
    'added' or 'changed' signals out of order. 
    
2006-09-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-ssh-generate.c:
    * src/seahorse-ssh-generate.glade:
    * src/seahorse-ssh-upload.c:
    * src/seahorse-ssh-upload.glade: Apply usability suggestions to 
    SSH dialogs from usability@gnome.org
     
2006-09-23 Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-ssh-source.c: Fixed setting of 
    error condition on success. Fixes #357315
    * src/seahorse-ssh-key-properties.glade:Fixed name for
    algo-label. Fixes #357316
    * libseahorse/seahorse-vfs-data.c: Changed permissions
    on created data. Fixes #357317

2006-09-20  Adam Schreiber  <sadam@clemson.edu>

    * plugins/epiphany/seahorse-extension.c: Fix segfault with context 
    menu on non-input callbacks.
    * plugins/applet/seahorse-applet.c: Fix decrypt error message. 
    * plugins/epiphany/seahorse-extension.c: Added decrypting and 
    verifying text and importing keys from a text field. Fixes #356447
    * plugins/applet/seahorse-applet.c:
    * plugins/epiphany/seahorse.ephy-extension.in.in:
    * src/seahorse-key-manager.c: Change to new website.

2006-09-19  Adam Schreiber  <sadam@clemson.edu>

    * plugins/epiphany/Makefile.am:
    * plugins/epiphany/seahorse-extension.c:
    * plugins/epiphany/mozilla/Makefile.am:
    * plugins/epiphany/mozilla/mozilla-helper.cpp:
    * plugins/epiphany/mozilla/mozilla-helper.h: Add signing of text 
    fields.

2006-09-18  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-gkeyring-source.c: Fix assertion when gnome-keyring
    doesn't have a default keyring. Fixes #356550
    