@@ -5,6 +5,8 @@
     created in the future. Fixes #356302
     * libcryptui/cryptui-key-set.c: Don't barf when the daemon sends us 
     'added' or 'changed' signals out of order. 
+    * libseahorse/seahorse-secure-memory.c: Don't try to use secure memory
+    when allocating secure memory failed.
     
 2006-09-23  Nate Nielsen  <nielsen@memberwebs.com>
 
